# k40gen

./: .gitignore  CMakeLists.txt  README.md  RELEASE.md  Test_Run.ipynb  clang-toolchain.cmake  pytest.ini  setup.cfg  setup.py
assignment/: skeleton.cpp
challenge/: km3net_reference.detx  skeleton.cpp
cmake/: Findpybind11.cmake  XTensor.cmake
docs/: KM3NeT-bkg-gen.rst  conf.py  index.rst
docs/challenge/: challenge.md  challenge.tex
lib/algorithm/: algo.h  clusterize.h  constants.h  final.cpp  match1D.h  match3D.h  partition.h  pmt_storage.h  rotation.h  skeleton.cpp  test.cpp  trigger_parameters_arca.txt
lib/generate/: aligned_allocator.h  config.h.in  generate.h  generate_avx2.h  generate_common.h  generate_scalar.h  storage.h
src/: main.cpp
src/generate/: generate.cpp  generate_avx2.cpp  generate_scalar.cpp  storage.cpp  vectorclass_ranvec1.cpp
src/k40gen/: bindings.cpp
tests/: CMakeLists.txt  coincidences.cpp  test_extension.py
tests/include/: test_functions.h
tests/lib/: coincidences.cpp  generate.cpp
tests/python/: test_extension.py
tests/src/: test_coincidences.cpp  test_rates.cpp  test_rates_root.cpp
